# isobot

./: .editorconfig  .gitignore  .replit  README.md  automod.py  code_tips.md  code_tips.txt  config_updater.py  development.md  economy.py  ideas.txt  index.html  levelling.py  main.js  main.py  maths.py  minigames.py  moderation.py  network_check.py  pyproject.toml  reddit.py  replit.nix  slash_commands.md  style.css
.dev/: IDEAS.md  MINIGAMES_IDEAS.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml
api/: auth.py  runtimeconfig.json
cogs/: afk.py  automod.py  devtools.py  e  economy.py  events.py  fun.py  isobank.py  isocard.py  isocoin.py  levelling.py  maths.py  minigames.py  moderation.py  osu.py  reddit.py  serverconfig.py  utils.py  weather.py
config/: commands.json  settings.json  shop.json  words.json
config/data/: lootbox.json
data_archive/: moderation.py  new_years_2022.json  new_years_special_event_2022.py  translate.txt
database/: currency.json
dev/: IDEAS.md
framework/: logger.py  types.py
framework/isobank/: authorize.py  manager.py
framework/isobot/: algorithms.py  colors.py  commands.py  currency.py  db.py  embedengine.py  isocard.py  isocardtxn.py  settings.py  shop.py
framework/isobot/db/: automod.py  (+9 more)
logs/: error-log.txt  info-log.txt
ossapi/: __init__.py  encoder.py  enums.py  mod.py  models.py  ossapi.py  ossapiv2.py  replay.py  utils.py
scripts/: redirect.js
themes/: halloween.theme.json
utils/: logger.py  ping.py
web/: index.html  iso-render-bootstrap.css
web/isobot/: index.html
