[tool.poetry]
name = "isobot"
version = "0.1.0"
description = "The Discord bot to make your server (a little bit) better."
authors = ["notsniped"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PyBotDevs/isobot"
homepage = "https://pybotdevs.github.io/isobot"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dependencies]
python = "^3.10"
api = "^0.0.7"
discord = "^2.3.2"
framework = { path = "path/to/framework" }

[tool]
